--- a/app/src/main/res/menu/menu_statistics.xml
+++ b/app/src/main/res/menu/menu_statistics.xml
@@ -6,5 +6,5 @@
         android:id="@+id/action_start"
         android:orderInCategory="100"
         android:title="@string/action_penometer_start"
-        app:showAsAction="never" />
+        app:showAsAction="ifRoom" />
 </menu>
