- Manifest Permission 허용 여부 추가 - OverLay View 추가 - 기록확인 RecyclerView추가

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -43,6 +43,10 @@
         <item name="android:textSize">@dimen/default_big_text_size</item>
     </style>
 
+    <style name="AppTheme.PenometerLittleBigTextStyle" parent="AppTheme.PenometerTextStyle">
+        <item name="android:textSize">@dimen/default_little_big_text_size</item>
+    </style>
+
     <style name="AppTheme.PenometerButtonStyle" parent="android:Widget.Button">
         <item name="android:textSize">@dimen/default_text_size</item>
         <item name="android:textColor">@color/colorAccent</item>
