--- a/app/src/main/res/layout/fragment_penometer_history_list.xml
+++ b/app/src/main/res/layout/fragment_penometer_history_list.xml
@@ -1,13 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/list"
     android:name="com.sean.android.pedometer.ui.PenometerHistorysFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginLeft="16dp"
-    android:layout_marginRight="16dp"
-    app:layoutManager="LinearLayoutManager"
-    tools:context="com.sean.android.pedometer.ui.PenoHistorysFragment"
-    tools:listitem="@layout/fragment_penometer_history" />
+    tools:context="com.sean.android.pedometer.ui.PedoHistorysFragment">
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/pedometer_history_recyclerview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        app:layoutManager="LinearLayoutManager"
+        tools:context="com.sean.android.pedometer.ui.PedoHistorysFragment"
+        tools:listitem="@layout/fragment_penometer_history" />
+
+    </RelativeLayout>
