--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,7 @@
 <resources>
     <dimen name="default_text_size">18sp</dimen>
     <dimen name="default_big_text_size">36sp</dimen>
+    <dimen name="default_little_big_text_size">30sp</dimen>
 
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
@@ -10,4 +11,9 @@
 
     <dimen name="text_margin">16dp</dimen>
 
+
+
+    <!-- Overlay View -->
+    <dimen name="overlayview_width">200dp</dimen>
+    <dimen name="overlayview_height">150dp</dimen>
 </resources>
