- Never Location Manager로 위치정보 가져오는 API 수정 - History Item UI 수정

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,6 @@
     <color name="colorMainTabDisableText">#c8c8c8</color>
     <color name="colorMainTabIndicator">#ff3800</color>
 
+    <color name="colorOverlayViewBackground">#c0ffffff</color>
+
 </resources>
