--- a/app/src/main/res/layout/fragment_penometer_history.xml
+++ b/app/src/main/res/layout/fragment_penometer_history.xml
@@ -1,33 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@drawable/penometer_history_background"
+    android:gravity="center_vertical"
+    android:layout_marginTop="8dp"
+    android:layout_marginBottom="8dp"
     android:orientation="horizontal">
 
+
+    <TextView
+        android:id="@+id/date_textview"
+        style="@style/AppTheme.PenometerTextStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/text_margin"
+        android:textAppearance="?attr/textAppearanceListItem" />
 
     <ImageView
         android:id="@+id/icon_imageview"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
-    <TextView
-        android:id="@+id/date_textview"
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/text_margin"
-        android:textAppearance="?attr/textAppearanceListItem" />
+        android:src="@drawable/ic_launcher" />
 
     <TextView
         android:id="@+id/stepcount_textview"
-        android:layout_width="wrap_content"
+        style="@style/AppTheme.PenometerStepTextStyle"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/text_margin"
+        android:gravity="right"
+        android:layout_weight="1"
+        android:lines="1"
         android:textAppearance="?attr/textAppearanceListItem" />
 
     <TextView
         android:id="@+id/distance_textview"
+        style="@style/AppTheme.PenometerTextStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/text_margin"
+        android:lines="1"
         android:textAppearance="?attr/textAppearanceListItem" />
 </LinearLayout>
