--- a/app/src/main/res/layout/fragment_penometer_history_list.xml
+++ b/app/src/main/res/layout/fragment_penometer_history_list.xml
@@ -12,6 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginLeft="16dp"
+        android:layout_marginTop="8dp"
         android:layout_marginRight="16dp"
         app:layoutManager="LinearLayoutManager"
         tools:context="com.sean.android.pedometer.ui.PedoHistorysFragment"
