--- a/app/src/main/res/layout/view_pedometer_overlay.xml
+++ b/app/src/main/res/layout/view_pedometer_overlay.xml
@@ -2,25 +2,35 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="@dimen/overlayview_width"
     android:layout_height="@dimen/overlayview_height"
-    android:background="@color/colorMainTabText"
+    android:background="@color/colorOverlayViewBackground"
     android:orientation="vertical">
+
+    <ImageView
+        android:id="@+id/overlay_icon_imageview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:scaleType="center"
+        android:src="@drawable/ic_launcher" />
 
     <TextView
         android:id="@+id/overlay_step_count_textview"
         style="@style/AppTheme.PenometerBigTextStyle"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="right"
-        android:text="@string/action_penometer_start" />
+        android:layout_alignParentRight="true"
+        android:layout_toRightOf="@+id/overlay_icon_imageview"
+        android:gravity="right" />
 
     <TextView
         android:id="@+id/overlay_distance_textview"
         style="@style/AppTheme.PenometerLittleBigTextStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
         android:layout_below="@id/overlay_step_count_textview"
-        android:gravity="right"
-        android:text="@string/action_penometer_start" />
+        android:layout_toRightOf="@+id/overlay_icon_imageview"
+        android:gravity="right" />
 
 
 </RelativeLayout>
