--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,6 @@
 <resources>
     <dimen name="default_text_size">18sp</dimen>
+    <dimen name="default_step_list_text_size">25sp</dimen>
     <dimen name="default_big_text_size">36sp</dimen>
     <dimen name="default_little_big_text_size">30sp</dimen>
 
