--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -34,6 +34,11 @@
         <item name="android:textAllCaps">false</item>
     </style>
 
+    <style name="AppTheme.PenometerStepTextStyle" parent="android:TextAppearance.Widget.TextView">
+        <item name="android:textSize">@dimen/default_step_list_text_size</item>
+        <item name="android:textColor">@color/colorPrimary</item>
+    </style>
+
     <style name="AppTheme.PenometerTextStyle" parent="android:TextAppearance.Widget.TextView">
         <item name="android:textSize">@dimen/default_text_size</item>
         <item name="android:textColor">@color/colorPrimary</item>
