--- a/app/src/main/res/layout/fragment_statistics.xml
+++ b/app/src/main/res/layout/fragment_statistics.xml
@@ -12,55 +12,119 @@
     tools:showIn="@layout/activity_statistics">
 
 
-
-
-
-    <TextView
-        android:id="@+id/step_textview"
-        style="@style/AppTheme.PenometerBigTextStyle"
+    <RelativeLayout
+        android:id="@+id/step_container"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:gravity="center"
-        android:text="0"
-        android:layout_marginTop="18dp"/>
+        android:layout_height="@dimen/title_container_height"
+        android:background="#ffffff"
+        android:gravity="center_vertical"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp">
 
-    <TextView
-        android:id="@+id/distance_textview"
-        style="@style/AppTheme.PenometerBigTextStyle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="0Km"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@id/step_textview" />
+        <TextView
+            android:id="@+id/stepcount_title_textview"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_centerVertical="true"
+            android:gravity="center_vertical"
+            android:text="@string/title_stepcount"
+            android:textColor="@color/colorMapTitle"
+            android:textSize="@dimen/map_view_title_size"
+            android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/location_textview"
-        style="@style/AppTheme.PenometerTextStyle"
+        <TextView
+            android:id="@+id/step_textview"
+            style="@style/AppTheme.PenometerContainerTextStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:textColor="@color/colorPrimary"
+            android:textSize="@dimen/default_little_big_text_size" />
+
+    </RelativeLayout>
+
+
+    <RelativeLayout
+        android:id="@+id/distance_container"
         android:layout_width="match_parent"
-        android:gravity="center"
-        android:layout_height="wrap_content"
-        android:text="위치"
-        android:layout_below="@id/distance_textview"
-        android:layout_centerInParent="true" />
+        android:layout_height="@dimen/title_container_height"
+        android:layout_below="@+id/step_container"
+        android:background="#ffffff"
+        android:gravity="center_vertical"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp">
+
+        <TextView
+            android:id="@+id/distance_title_textview"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_centerVertical="true"
+            android:gravity="center_vertical"
+            android:text="@string/title_distance"
+            android:textColor="@color/colorMapTitle"
+            android:textSize="@dimen/map_view_title_size"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/distance_textview"
+            style="@style/AppTheme.PenometerContainerTextStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:textColor="@color/colorPrimary"
+            android:textSize="@dimen/default_little_big_text_size" />
+
+    </RelativeLayout>
 
     <Button
         android:id="@+id/pause_button"
         style="@style/AppTheme.PenometerButtonStyle"
         android:layout_width="match_parent"
         android:layout_height="50dp"
+        android:layout_alignParentBottom="true"
         android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_alignParentBottom="true" />
+        android:layout_marginRight="16dp" />
 
-    <com.nhn.android.maps.NMapView
-        android:layout_below="@id/location_textview"
+
+    <LinearLayout
+        android:id="@+id/naver_map_container"
         android:layout_width="match_parent"
-        android:layout_height="300dp"/>
+        android:layout_height="300dp"
+        android:layout_below="@+id/distance_container"
+        android:orientation="vertical">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/title_container_height"
+            android:background="#ffffff"
+            android:gravity="center_vertical"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp">
+
+            <TextView
+                android:id="@+id/map_title_textview"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_centerVertical="true"
+                android:gravity="center_vertical"
+                android:text="@string/title_location"
+                android:textColor="@color/colorMapTitle"
+                android:textSize="@dimen/map_view_title_size"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/location_textview"
+                style="@style/AppTheme.PenometerContainerTextStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent" />
+
+        </RelativeLayout>
 
 
+        <com.nhn.android.maps.NMapView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@id/location_textview" />
 
+    </LinearLayout>
 
 
 </RelativeLayout>
