--- a/app/src/main/res/layout/view_pedometer_overlay.xml
+++ b/app/src/main/res/layout/view_pedometer_overlay.xml
@@ -1,36 +1,87 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="@dimen/overlayview_width"
-    android:layout_height="@dimen/overlayview_height"
-    android:background="@color/colorOverlayViewBackground"
-    android:orientation="vertical">
+    android:layout_height="@dimen/overlayview_height">
 
-    <ImageView
-        android:id="@+id/overlay_icon_imageview"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:scaleType="center"
-        android:src="@drawable/ic_launcher" />
 
-    <TextView
-        android:id="@+id/overlay_step_count_textview"
-        style="@style/AppTheme.PenometerBigTextStyle"
+    <RelativeLayout
+        android:id="@+id/step_container"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_toRightOf="@+id/overlay_icon_imageview"
-        android:gravity="right" />
+        android:layout_height="@dimen/title_container_height"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="10dp"
+        android:background="@color/colorOverlayViewBackground"
+        android:gravity="center_vertical"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp">
 
-    <TextView
-        android:id="@+id/overlay_distance_textview"
-        style="@style/AppTheme.PenometerLittleBigTextStyle"
+        <TextView
+            android:id="@+id/stepcount_title_textview"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_centerVertical="true"
+            android:gravity="center_vertical"
+            android:text="@string/title_stepcount"
+            android:textColor="@color/colorMapTitle"
+            android:textSize="@dimen/map_view_title_size"
+            android:textStyle="bold" />
+
+
+        <TextView
+            android:id="@+id/overlay_step_count_textview"
+            style="@style/AppTheme.PenometerContainerTextStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_centerVertical="true"
+            android:textColor="@color/colorPrimary"
+            android:textSize="@dimen/default_step_list_text_size" />
+
+    </RelativeLayout>
+
+
+    <RelativeLayout
+        android:id="@+id/distance_container"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/title_container_height"
+        android:layout_below="@+id/step_container"
+        android:layout_marginBottom="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:background="@color/colorOverlayViewBackground"
+        android:gravity="center_vertical"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp">
+
+        <TextView
+            android:id="@+id/distance_title_textview"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_centerVertical="true"
+            android:gravity="center_vertical"
+            android:text="@string/title_distance"
+            android:textColor="@color/colorMapTitle"
+            android:textSize="@dimen/map_view_title_size"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/overlay_distance_textview"
+            style="@style/AppTheme.PenometerContainerTextStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_centerVertical="true"
+            android:textColor="@color/colorPrimary"
+            android:textSize="@dimen/default_text_size" />
+
+    </RelativeLayout>
+
+    <ImageButton
+        android:id="@+id/close_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
-        android:layout_below="@id/overlay_step_count_textview"
-        android:layout_toRightOf="@+id/overlay_icon_imageview"
-        android:gravity="right" />
-
+        android:layout_alignParentTop="true"
+        android:background="@null"
+        android:src="@drawable/ic_remove_circle" />
 
 </RelativeLayout>
