--- a/app/src/main/res/layout/fragment_statistics.xml
+++ b/app/src/main/res/layout/fragment_statistics.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.sean.android.pedometer.ui.StatisticsFragment"
+    tools:context="com.sean.android.pedometer.ui.PedoStatisticsFragment"
     tools:showIn="@layout/activity_statistics">
 
 
