--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,6 @@
 <resources>
+
+    <dimen name="default_small_text_size">12sp</dimen>
     <dimen name="default_text_size">18sp</dimen>
     <dimen name="default_step_list_text_size">25sp</dimen>
     <dimen name="default_big_text_size">36sp</dimen>
@@ -22,4 +24,7 @@
     <!-- Overlay View -->
     <dimen name="overlayview_width">200dp</dimen>
     <dimen name="overlayview_height">150dp</dimen>
+
+    <!-- Splash View -->
+    <dimen name="splashview_title_text_size">14sp</dimen>
 </resources>
